// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useValidatorWebsocket hook > validate a stream 1`] = `
[
  {
    "errors": [],
    "hasError": false,
    "line": 1,
    "text": "<?xml version="1.0" encoding="UTF-8"?>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 2,
    "text": "<MPD xmlns="urn:mpeg:dash:schema:mpd:2011"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 3,
    "text": "     xmlns:cenc="urn:mpeg:cenc:2013"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 4,
    "text": "     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 5,
    "text": "     xsi:schemaLocation="urn:mpeg:dash:schema:mpd:2011 DASH-MPD.xsd"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 6,
    "text": "     publishTime="2025-01-14T07:37:34Z"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 7,
    "text": "     id="bbb"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 8,
    "text": "    type="static"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 9,
    "text": "    mediaPresentationDuration="PT9M51.458S"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 10,
    "text": "  profiles="urn:mpeg:dash:profile:isoff-live:2011,urn:dvb:dash:profile:dvbdash:2014"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 11,
    "text": "  minBufferTime="PT1.5S"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 12,
    "text": ">",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 13,
    "text": " <ProgramInformation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 14,
    "text": "  <Title>Big Buck Bunny </Title>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 15,
    "text": " </ProgramInformation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 16,
    "text": " <Location>http://localhost:8765/dash/vod/bbb/hand_made.mpd</Location>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 17,
    "text": "   <Period start="PT0S" id="p0"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 18,
    "text": "   ><BaseURL>http://localhost:8765/dash/vod/bbb/</BaseURL>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 19,
    "text": "     ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 20,
    "text": "       <AdaptationSet",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 21,
    "text": "         id="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 22,
    "text": "         mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 23,
    "text": "         contentType="video"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 24,
    "text": "         segmentAlignment="true"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 25,
    "text": "         startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 26,
    "text": "           maxWidth="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 27,
    "text": "           maxHeight="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 28,
    "text": "           maxFrameRate="24"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 29,
    "text": "           par="16:9"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 30,
    "text": "         >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 31,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 32,
    "text": "  ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 33,
    "text": "    ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 34,
    "text": "<InbandEventStream",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 35,
    "text": " schemeIdUri="urn:dash-live:pingpong:2022"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 36,
    "text": " timescale="100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 37,
    "text": " value="0"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 38,
    "text": " />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 39,
    "text": "",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 40,
    "text": "  ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 41,
    "text": "",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 42,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 43,
    "text": "         <ContentComponent",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 44,
    "text": "             id="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 45,
    "text": "             contentType="video" />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 46,
    "text": "               <SegmentTemplate",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 47,
    "text": "                   startNumber="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 48,
    "text": "                   timescale="240"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 49,
    "text": "                   duration="960"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 50,
    "text": "                   initialization="$RepresentationID$/init.m4v"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 51,
    "text": "                   media="$RepresentationID$/$Number$.m4v">",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 52,
    "text": "               </SegmentTemplate>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 53,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 54,
    "text": "               id="bbb_v7"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 55,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 56,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 57,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 58,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 59,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 60,
    "text": "               bandwidth="189666"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 61,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 62,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 63,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 64,
    "text": "               id="bbb_v6"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 65,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 66,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 67,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 68,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 69,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 70,
    "text": "               bandwidth="372594"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 71,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 72,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 73,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 74,
    "text": "               id="bbb_v5"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 75,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 76,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 77,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 78,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 79,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 80,
    "text": "               bandwidth="572786"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 81,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 82,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 83,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 84,
    "text": "               id="bbb_v4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 85,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 86,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 87,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 88,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 89,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 90,
    "text": "               bandwidth="659759"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 91,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 92,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 93,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 94,
    "text": "               id="bbb_v3"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 95,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 96,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 97,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 98,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 99,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 100,
    "text": "               bandwidth="1027100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 101,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 102,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 103,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 104,
    "text": "               id="bbb_v2"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 105,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 106,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 107,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 108,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 109,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 110,
    "text": "               bandwidth="1807672"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 111,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 112,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 113,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 114,
    "text": "               id="bbb_v1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 115,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 116,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 117,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 118,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 119,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 120,
    "text": "               bandwidth="2953886"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 121,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 122,
    "text": "           </Representation> ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 123,
    "text": "       </AdaptationSet>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 124,
    "text": "       <AdaptationSet",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 125,
    "text": "         id="2"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 126,
    "text": "         mimeType="audio/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 127,
    "text": "         contentType="audio"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 128,
    "text": "         segmentAlignment="true"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 129,
    "text": "         startWithSAP=""",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 130,
    "text": "         >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 131,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 132,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 133,
    "text": "         <ContentComponent",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 134,
    "text": "             id="2"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 135,
    "text": "             contentType="audio" />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 136,
    "text": "           <Role",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 137,
    "text": "             schemeIdUri="urn:mpeg:dash:role:2011"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 138,
    "text": "             value="main"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 139,
    "text": "           />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 140,
    "text": "         <AudioChannelConfiguration",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 141,
    "text": "             schemeIdUri="urn:mpeg:dash:23003:3:audio_channel_configuration:2011"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 142,
    "text": "             value="2" />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 143,
    "text": "               <SegmentTemplate",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 144,
    "text": "                   startNumber="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 145,
    "text": "                   timescale="44100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 146,
    "text": "                   duration="176399"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 147,
    "text": "                   initialization="$RepresentationID$/init.m4a"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 148,
    "text": "                   media="$RepresentationID$/$Number$.m4a">",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 149,
    "text": "               </SegmentTemplate>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 150,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 151,
    "text": "               id="bbb_a1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 152,
    "text": "               mimeType="audio/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 153,
    "text": "               codecs="mp4a.40.2"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 154,
    "text": "                   audioSamplingRate="44100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 155,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 156,
    "text": "               bandwidth="98247"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 157,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 158,
    "text": "           </Representation> ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 159,
    "text": "       </AdaptationSet> ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 160,
    "text": "   </Period> ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 161,
    "text": "</MPD>",
  },
]
`;

exports[`useValidatorWebsocket hook > validate a stream that has errors 1`] = `
[
  {
    "errors": [],
    "hasError": false,
    "line": 1,
    "text": "<?xml version="1.0" encoding="UTF-8"?>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 2,
    "text": "<MPD xmlns="urn:mpeg:dash:schema:mpd:2011"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 3,
    "text": "     xmlns:cenc="urn:mpeg:cenc:2013"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 4,
    "text": "     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 5,
    "text": "     xsi:schemaLocation="urn:mpeg:dash:schema:mpd:2011 DASH-MPD.xsd"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 6,
    "text": "     publishTime="2025-01-14T07:37:34Z"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 7,
    "text": "     id="bbb"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 8,
    "text": "    type="static"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 9,
    "text": "    mediaPresentationDuration="PT9M51.458S"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 10,
    "text": "  profiles="urn:mpeg:dash:profile:isoff-live:2011,urn:dvb:dash:profile:dvbdash:2014"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 11,
    "text": "  minBufferTime="PT1.5S"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 12,
    "text": ">",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 13,
    "text": " <ProgramInformation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 14,
    "text": "  <Title>Big Buck Bunny </Title>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 15,
    "text": " </ProgramInformation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 16,
    "text": " <Location>http://localhost:8765/dash/vod/bbb/hand_made.mpd</Location>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 17,
    "text": "   <Period start="PT0S" id="p0"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 18,
    "text": "   ><BaseURL>http://localhost:8765/dash/vod/bbb/</BaseURL>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 19,
    "text": "     ",
  },
  {
    "errors": [
      "1.2.3: validator assertion message",
    ],
    "hasError": true,
    "line": 20,
    "text": "       <AdaptationSet",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 21,
    "text": "         id="1"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 22,
    "text": "         mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 23,
    "text": "         contentType="video"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 24,
    "text": "         segmentAlignment="true"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 25,
    "text": "         startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 26,
    "text": "           maxWidth="1920"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 27,
    "text": "           maxHeight="1080"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 28,
    "text": "           maxFrameRate="24"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 29,
    "text": "           par="16:9"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 30,
    "text": "         >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 31,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 32,
    "text": "  ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 33,
    "text": "    ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 34,
    "text": "<InbandEventStream",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 35,
    "text": " schemeIdUri="urn:dash-live:pingpong:2022"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 36,
    "text": " timescale="100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 37,
    "text": " value="0"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 38,
    "text": " />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 39,
    "text": "",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 40,
    "text": "  ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 41,
    "text": "",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 42,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 43,
    "text": "         <ContentComponent",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 44,
    "text": "             id="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 45,
    "text": "             contentType="video" />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 46,
    "text": "               <SegmentTemplate",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 47,
    "text": "                   startNumber="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 48,
    "text": "                   timescale="240"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 49,
    "text": "                   duration="960"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 50,
    "text": "                   initialization="$RepresentationID$/init.m4v"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 51,
    "text": "                   media="$RepresentationID$/$Number$.m4v">",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 52,
    "text": "               </SegmentTemplate>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 53,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 54,
    "text": "               id="bbb_v7"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 55,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 56,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 57,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 58,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 59,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 60,
    "text": "               bandwidth="189666"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 61,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 62,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 63,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 64,
    "text": "               id="bbb_v6"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 65,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 66,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 67,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 68,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 69,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 70,
    "text": "               bandwidth="372594"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 71,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 72,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 73,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 74,
    "text": "               id="bbb_v5"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 75,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 76,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 77,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 78,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 79,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 80,
    "text": "               bandwidth="572786"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 81,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 82,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 83,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 84,
    "text": "               id="bbb_v4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 85,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 86,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 87,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 88,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 89,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 90,
    "text": "               bandwidth="659759"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 91,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 92,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 93,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 94,
    "text": "               id="bbb_v3"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 95,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 96,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 97,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 98,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 99,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 100,
    "text": "               bandwidth="1027100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 101,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 102,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 103,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 104,
    "text": "               id="bbb_v2"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 105,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 106,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 107,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 108,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 109,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 110,
    "text": "               bandwidth="1807672"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 111,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 112,
    "text": "           </Representation>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 113,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 114,
    "text": "               id="bbb_v1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 115,
    "text": "               mimeType="video/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 116,
    "text": "               codecs="avc3.640028"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 117,
    "text": "                 width="1920"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 118,
    "text": "                 height="1080"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 119,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [
      "representation has an error",
    ],
    "hasError": true,
    "line": 120,
    "text": "               bandwidth="2953886"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 121,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 122,
    "text": "           </Representation> ",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 123,
    "text": "       </AdaptationSet>",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 124,
    "text": "       <AdaptationSet",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 125,
    "text": "         id="2"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 126,
    "text": "         mimeType="audio/mp4"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 127,
    "text": "         contentType="audio"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 128,
    "text": "         segmentAlignment="true"",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 129,
    "text": "         startWithSAP=""",
  },
  {
    "errors": [],
    "hasError": true,
    "line": 130,
    "text": "         >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 131,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 132,
    "text": "         ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 133,
    "text": "         <ContentComponent",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 134,
    "text": "             id="2"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 135,
    "text": "             contentType="audio" />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 136,
    "text": "           <Role",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 137,
    "text": "             schemeIdUri="urn:mpeg:dash:role:2011"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 138,
    "text": "             value="main"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 139,
    "text": "           />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 140,
    "text": "         <AudioChannelConfiguration",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 141,
    "text": "             schemeIdUri="urn:mpeg:dash:23003:3:audio_channel_configuration:2011"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 142,
    "text": "             value="2" />",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 143,
    "text": "               <SegmentTemplate",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 144,
    "text": "                   startNumber="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 145,
    "text": "                   timescale="44100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 146,
    "text": "                   duration="176399"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 147,
    "text": "                   initialization="$RepresentationID$/init.m4a"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 148,
    "text": "                   media="$RepresentationID$/$Number$.m4a">",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 149,
    "text": "               </SegmentTemplate>",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 150,
    "text": "           <Representation",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 151,
    "text": "               id="bbb_a1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 152,
    "text": "               mimeType="audio/mp4"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 153,
    "text": "               codecs="mp4a.40.2"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 154,
    "text": "                   audioSamplingRate="44100"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 155,
    "text": "               startWithSAP="1"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 156,
    "text": "               bandwidth="98247"",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 157,
    "text": "           >",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 158,
    "text": "           </Representation> ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 159,
    "text": "       </AdaptationSet> ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 160,
    "text": "   </Period> ",
  },
  {
    "errors": [],
    "hasError": false,
    "line": 161,
    "text": "</MPD>",
  },
]
`;
